@@ -32,10 +32,10 @@ namespace LastExit
 {
 	public sealed class Driver
 	{
-		 // For the SEGV trap hack (see below)
+		// For the SEGV trap hack (see below)
 		[System.Runtime.InteropServices.DllImport("libc")]
-		 private static extern int sigaction(Mono.Unix.Native.Signum sig, IntPtr act, IntPtr oact);
-		
+		private static extern int sigaction(Mono.Unix.Native.Signum sig, IntPtr act, IntPtr oact);
+
 		// The size of the cover images.
 		public static int CoverSize = 66;
 
@@ -44,7 +44,7 @@ namespace LastExit
 
 		public static FMConnection connection;
 		public static Player player;
-		
+
 		private static DBusRemote dbus_remote;
 		private static DBusPlayer dbus_player;
 
@@ -53,16 +53,18 @@ namespace LastExit
 			get { return config_directory; }
 		}
 
+		public static Config config;
+
 		public static void Main (string[] args) {
 
 			// Work around DBus locking issues
 			DBusPlayer.dbus_g_thread_init ();
-			
+
 			BusG.Init();
 
 			// Search for existing DBus server
 			IDBusPlayer dbus_core = DetectInstanceAndDbus();
-			HandleDbusCommands (dbus_core);
+			HandleDbusCommands (dbus_core, args);
 
 			// If we are the only instance, start a new DBus server
 			Console.WriteLine("Starting new Last Exit server");
@@ -70,9 +72,8 @@ namespace LastExit
 				dbus_remote = new DBusRemote();
 				dbus_player = new DBusPlayer();
 				dbus_remote.RegisterObject(dbus_player, "Player");
-			} catch {
-            }
-			
+			} catch {}
+
 			string username;
 			string password;
 
@@ -88,7 +89,7 @@ namespace LastExit
 
 			if (config.FirstRun) {
 				FirstRunDialog frd = new FirstRunDialog ();
-				
+
 				int response = frd.Run ();
 
 				frd.Visible = false;
@@ -103,7 +104,7 @@ namespace LastExit
 						config.Username = frd.Username;
 						config.Password = frd.Password;
 						break;
-					
+
 					default:
 						break;
 				}
@@ -115,7 +116,7 @@ namespace LastExit
 			Driver.SetUpConfigDirectory ();
 
 			//TrayIcon.ShowNotifications = config.ShowNotifications;
-		
+
 			username = config.Username;
 			password = config.Password;
 
@@ -147,100 +148,40 @@ namespace LastExit
 			sigaction(Mono.Unix.Native.Signum.SIGSEGV, mono_jit_segv_handler, IntPtr.Zero);
 			System.Runtime.InteropServices.Marshal.FreeHGlobal(mono_jit_segv_handler);
 		}
-		public static void DBusMessage (string message, string content)
-		{
-			switch (message) {
-				case "change_station":
-					connection.ChangeStation(content);
-					player_window.Present();
-					break;
-				case "focus_instance":
-					// if player window is hidden don't show it
-					if (player_window.Visible == true) { 
-						player_window.Present();
-					}
-					break;
-			}
-		}
 
-		public static Config config;
-		
-        private static void HandleDbusCommands(IDBusPlayer remote_player)
-        {
-            if(remote_player == null) {
-                return;
-            }
-            
-            bool present = true;
-            
-            /*
-            string [] files = Globals.ArgumentQueue.Files;
-            if(files.Length > 0) {
-                remote_player.EnqueueFiles(files);
-            }
-        	foreach(string arg in Globals.ArgumentQueue.Arguments) {
-                bool dequeue = true;
-              
-                switch(arg) {
-                case "shutdown":
-                    remote_player.Shutdown();
-                    present = false;
-                    break;
-                case "toggle-playing":
-                    remote_player.TogglePlaying();
-                    present = false;
-                    break;
-                case "play":
-                    remote_player.Play();
-                    present = false;
-                    break;
-                case "pause":
-                    remote_player.Pause();
-                    present = false;
-                    break;
-                case "show":
-                    remote_player.ShowWindow();
-                    present = false;
-                    break;
-                case "hide":
-                    remote_player.HideWindow();
-                    present = false;
-                    break;
-                case "next":
-                    remote_player.Next();
-                    present = false;
-                    break;
-                case "previous":
-                    remote_player.Previous();
-                    present = false;
-                    break;
-                }
-            
-                
-                if(dequeue) {
-                    Globals.ArgumentQueue.Dequeue(arg);
-                }
-            }
-            */
-            
-            if(present) {
-                try {
-                    Present(remote_player);
-                } catch (Exception e) {
-                	Console.WriteLine(e);
-                    return;
-                }
-            }
-            
+		private static void HandleDbusCommands(IDBusPlayer remote_player, string[] args)
+		{
+			if(remote_player == null) {
+				return;
+			}
+
+			bool present = true;
+
+			if (args.Length > 0) {
+				// FIXME: Do some better argument checking
+				remote_player.ChangeStation (args[0]);
+				Present(remote_player);
+				present = false;
+			}
+			
+			if(present) {
+				try {
+					Present(remote_player);
+				} catch (Exception e) {
+					Console.WriteLine(e);
+					return;
+				}
+			}
+
 			Gdk.Global.NotifyStartupComplete();
 			System.Environment.Exit(0);
-        }
-        
-        private static void Present(IDBusPlayer remote_player)
-        {
-            remote_player.PresentWindow();
-        }
-        
+		}
+
+		private static void Present(IDBusPlayer remote_player)
+		{
+			remote_player.PresentWindow();
+		}
+
 		public static void Exit () {
 			Environment.Exit (0);
 		}
@@ -259,12 +200,12 @@ namespace LastExit
 		}
 
 		[DllImport ("libc")]
-		private static extern int prctl (int option,  
-				 byte[] arg2,
-				 ulong arg3,
-				 ulong arg4,
-				 ulong arg5);
-	
+			private static extern int prctl (int option,  
+					byte[] arg2,
+					ulong arg3,
+					ulong arg4,
+					ulong arg5);
+
 		private static void SetProcessName (string name)
 		{
 			if (prctl (15, Encoding.ASCII.GetBytes (name + "\0"), 0, 0, 0) != 0) {
@@ -279,7 +220,7 @@ namespace LastExit
 			if (dinfo.Exists) {
 				return;
 			}
-			
+
 			dinfo.Create ();
 		}
 
